@@ -38,6 +38,16 @@ ConfigDialog::ConfigDialog(QWidget *parent)
   config_address_label->setAlignment(Qt::AlignVCenter|Qt::AlignRight);
   config_address_label->setFont(bold_font);
 
+  config_keyaction_label=new QLabel(tr("SpaceBar Action")+":",this);
+  config_keyaction_label->setAlignment(Qt::AlignVCenter|Qt::AlignRight);
+  config_keyaction_label->setFont(bold_font);
+  config_keyaction_box=new ComboBox(this);
+  config_keyaction_box->insertItem(-1,tr("None"),ConfigDialog::None);
+  config_keyaction_box->insertItem(-1,tr("Start"),ConfigDialog::Start);
+  config_keyaction_box->insertItem(-1,tr("Stop"),ConfigDialog::Stop);
+  config_keyaction_box->insertItem(-1,tr("Preset"),ConfigDialog::Preset);
+  config_keyaction_box->insertItem(-1,tr("Clear"),ConfigDialog::Reset);
+
   config_ok_button=new QPushButton(tr("OK"),this);
   config_ok_button->setFont(bold_font);
   connect(config_ok_button,SIGNAL(clicked()),this,SLOT(okData()));
@@ -52,16 +62,20 @@ ConfigDialog::ConfigDialog(QWidget *parent)
 
 QSize ConfigDialog::sizeHint() const
 {
-  return QSize(325,85);
+  return QSize(325,115);
 }
 
 
-int ConfigDialog::exec(QHostAddress *clock_addr)
+int ConfigDialog::exec(QHostAddress *clock_addr,
+		       ConfigDialog::KeyAction *key_action)
 {
   config_clock_address=clock_addr;
+  config_key_action=key_action;
   if(!config_clock_address->isNull()) {
     config_address_edit->setText(config_clock_address->toString());
   }
+  config_key_action=key_action;
+  config_keyaction_box->setCurrentItemData(*key_action);
 
   return QDialog::exec();
 }
@@ -74,6 +88,8 @@ void ConfigDialog::okData()
 			 tr("Invalid IP Address!"));
     return;
   }
+  *config_key_action=
+    (ConfigDialog::KeyAction)config_keyaction_box->currentItemData().toInt();
   done(true);
 }
 
@@ -86,8 +102,11 @@ void ConfigDialog::cancelData()
 
 void ConfigDialog::resizeEvent(QResizeEvent *e)
 {
-  config_address_label->setGeometry(10,10,120,20);
-  config_address_edit->setGeometry(135,10,size().width()-145,20);
+  config_address_label->setGeometry(10,10,135,20);
+  config_address_edit->setGeometry(150,10,size().width()-145,20);
+
+  config_keyaction_label->setGeometry(10,40,135,20);
+  config_keyaction_box->setGeometry(150,40,100,20);
 
   config_ok_button->setGeometry(size().width()-140,size().height()-40,60,30);
 
