@@ -54,3 +54,5 @@
 2016-09-02 Fred Gleason <fredg@paravelsystems.com>
 	* Changed the legend on the reset button to 'Clear'.
 	* Added keyboard accelerators for the four buttons.
+2016-09-02 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'SpaceBar Action' control to the Configuration Dialog.
